<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ActivityCreate">

    <ImageView
        android:id="@+id/createDisplayPicture"
        android:layout_width="152dp"
        android:layout_height="225dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:onClick="captureImage"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_photo" />

    <EditText
        android:id="@+id/createUsername"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="#D7D7D6"
        android:ems="10"
        android:hint="@string/createUsr_hint"
        android:inputType="textPersonName"
        android:textColorHint="#FF178E7E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createDisplayPicture"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createPassowrd"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:background="#D7D7D6"
        android:ems="10"
        android:hint="@string/createPwd_hint"
        android:inputType="textPassword"
        android:textColorHint="#FF178E7E"
        app:layout_constraintEnd_toEndOf="@+id/createUsername"
        app:layout_constraintStart_toStartOf="@+id/createUsername"
        app:layout_constraintTop_toBottomOf="@+id/createUsername" />

    <CheckBox
        android:id="@+id/createAdminUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#FF178E7E"
        android:text="@string/createAdmn_hint"
        app:layout_constraintEnd_toEndOf="@+id/createPassowrd"
        app:layout_constraintStart_toStartOf="@+id/createPassowrd"
        app:layout_constraintTop_toBottomOf="@+id/createPassowrd" />
    <EditText
        android:id="@+id/createFirstName"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:background="#D7D7D6"
        android:ems="10"
        android:hint="@string/createFistName_hint"
        android:inputType="textPersonName"
        android:textColorHint="#FF178E7E"
        app:layout_constraintEnd_toEndOf="@+id/createPassowrd"
        app:layout_constraintStart_toStartOf="@+id/createPassowrd"
        app:layout_constraintTop_toBottomOf="@+id/createAdminUser" />

    <EditText
        android:id="@+id/createLastName"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="#D7D7D6"
        android:ems="10"
        android:hint="@string/createLastName_hint"
        android:inputType="textPersonName"
        android:textColorHint="#FF178E7E"
        app:layout_constraintEnd_toEndOf="@+id/createFirstName"
        app:layout_constraintStart_toStartOf="@+id/createFirstName"
        app:layout_constraintTop_toBottomOf="@+id/createFirstName" />

    <TextView
        android:id="@+id/createDepartment"
        android:layout_width="119dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/createDept_lbl"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/createDisplayPicture"
        app:layout_constraintTop_toBottomOf="@+id/createDisplayPicture" />

    <TextView
        android:id="@+id/createPosition"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/createPosition_lbl"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/createDepartment"
        app:layout_constraintStart_toStartOf="@+id/createDepartment"
        app:layout_constraintTop_toBottomOf="@+id/createDepartment" />

    <EditText
        android:id="@+id/createDept"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:ems="10"
        android:hint="@string/createDpt_hint"
        android:inputType="textPersonName"
        android:textColorHint="#FF178E7E"
        android:background="#D7D7D6"
        app:layout_constraintBaseline_toBaselineOf="@+id/createDepartment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createDepartment" />

    <EditText
        android:id="@+id/createPos"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:background="#D7D7D6"
        android:ems="10"
        android:hint="@string/createPos_hint"
        android:inputType="textPersonName"
        android:textColorHint="#FF178E7E"
        app:layout_constraintEnd_toEndOf="@+id/createDept"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/createDept"
        app:layout_constraintTop_toBottomOf="@+id/createDept" />

    <TextView
        android:id="@+id/createStoryView"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/createStory_lbl"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/createPosition"
        app:layout_constraintStart_toStartOf="@+id/createPosition"
        app:layout_constraintTop_toBottomOf="@+id/createPosition" />

    <EditText
        android:id="@+id/createStory"
        android:layout_width="381dp"
        android:layout_height="252dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#D7D7D6"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/createStory_hint"
        android:inputType="textMultiLine"
        android:maxLength="360"
        android:textColorHint="#FF178E7E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableCharacters"
        app:layout_constraintVertical_bias="0.392" />

    <TextView
        android:id="@+id/availableCharacters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/createStoryView"
        app:layout_constraintEnd_toEndOf="@+id/createPos"
        app:layout_constraintStart_toStartOf="@+id/createPos"
        app:layout_constraintTop_toBottomOf="@+id/createPos" />

    <ImageView
        android:id="@+id/createImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/createDisplayPicture"
        app:layout_constraintEnd_toEndOf="@+id/createDisplayPicture"
        app:layout_constraintStart_toStartOf="@+id/createDisplayPicture"
        app:layout_constraintTop_toTopOf="@+id/createDisplayPicture"
        app:srcCompat="@android:drawable/ic_menu_add" />
</androidx.constraintlayout.widget.ConstraintLayout>